# Prefix_treee

./: .gitignore  .ocamlformat  README.MD  dune-project
.github/workflows/: ocaml.yml
src/: dune  prefix_tree.ml
test/: dune  property_test.ml  test_unit.ml
